<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center|top"
    android:padding="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_number_guess"
        android:textSize="30sp"/>
    <Button
        android:id="@+id/start_button"
        android:onClick="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_start"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_guess"/>
        <EditText
            android:id="@+id/num"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_number"
            android:inputType="number"/>
            <!-- tools:ignore="Autofill" -->

        <Button
            android:id="@+id/doGuess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_do_guess"
            android:onClick="guess"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_start_info"
        android:textColor="#FF000000"
        android:textSize="20sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <TextView
        android:text="@string/label_log"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.example.numberguessinggame.Console
        android:id="@+id/console"
        android:layout_height="100sp"
        android:layout_width="match_parent" />
</LinearLayout>